<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res/com.nrb.matatu"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<!-- Include action bar -->
		<include layout="@layout/actionbar_head" android:id="@id/actionbar" />

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content"  android:padding="10dp">
			<TextView android:id="@+id/textView4" android:text="@string/matatu_report_type_label"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_marginBottom="5dip" android:layout_marginTop="5dip"></TextView>
			<requestFocus></requestFocus>
			<Spinner android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_marginBottom="5dip"
				android:id="@+id/incident_type_spinner">
			</Spinner>

			<TextView android:id="@+id/textView1" android:text="@string/matatu_report_title_label"
				android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
			<EditText android:id="@+id/editText1" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_marginBottom="5dip">
			</EditText>
			<TextView android:id="@+id/textView2" android:text="@string/matatu_report_incident_label"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_marginBottom="5dip"></TextView>

			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginBottom="5dip">
				<ImageButton android:id="@+id/camera_button"
					android:background="@drawable/camera_button" android:padding="12dip"
					android:layout_margin="10dip" android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"></ImageButton>
				<EditText android:id="@+id/incident_description_field"
					android:hint="Details of incident \nhere..." android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:layout_toLeftOf="@id/camera_button"
					android:inputType="textMultiLine"></EditText>
			</RelativeLayout>

			<ImageView android:id="@+id/imageView"
				android:layout_marginBottom="5dip" android:layout_width="250dp"
				android:layout_height="250dp" android:layout_gravity="center" />
			<Button android:id="@+id/submit_button" android:layout_height="wrap_content"
				android:layout_marginBottom="5dip" android:layout_width="fill_parent"
				android:text="@string/matatu_report_submit_button"></Button>
		</LinearLayout>
	</ScrollView>	
</LinearLayout>
